# malaria-cell-classifier

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
app/: requirements.txt  streamlit_app.py
artifacts/: README.md
artifacts/custom_cnn/: epochs.csv  run.json
artifacts/efficientnet_b0/: epochs.csv  run.json
artifacts/mobilenet_v2/: config.yaml  epochs.csv  run.json
configs/: custom_cnn.yaml  efficientnet_b0.yaml
data/: README.md
data/sample/: README.md
notebooks/: README.md
results/: README.md  custom_cnn_evaluation.json  efficientnet_b0_evaluation.json  evaluation.json  mobilenet_v2_evaluation.json  model_comparison.csv
scripts/: build_model_comparison.py  prepare_data.py
src/: __init__.py  data.py  evaluate.py  explain.py  models.py  train.py
tests/: test_configs.py  test_evaluate.py  test_explain.py  test_models.py
