[build-system]
requires = ["setuptools==70.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "malaria-cell-classifier"
version = "0.1.0"
description = "Reproducible malaria cell image classification research prototype"
readme = "README.md"
requires-python = ">=3.11,<3.12"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
